<resources>
    <string name="app_name">EasyMath</string>
    <string name="open">Open</string>
    <string name="correct_answers">Correct Answers: %1$d</string>
    <string name="close">Open</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="topic101">Санның дәрежесі санды өзіне қайта-қайта көбейтудің нәтижесі болып табылады. </string>
    <string name="topic102">3 · 3 · 3 · 3 · 3 = 3<sup><small>5</small></sup></string>
    <string name="topic103">Мұнда an «дәреже» ретінде белгіленген. a – дәреженің негізі, n – көрсеткіш. an-ды оқуға болады: “a-дан n-ші дәрежеге” немесе “a-дан n-ші дәрежеге”.
Санның дәрежесін анықтау көбейту арқылы жүзеге асырылады.
</string>
    <string name="topic104">3<sup><small>5</small></sup> = 3 · 3 · 3 · 3 · 3 = 243</string>
    <string name="topic105">Санның екінші дәрежесі шаршы деп аталады, ал үшінші дәрежесі осы санның кубы деп аталады.</string>
    <string name="topic106">Жұп дәрежелі теріс сан оң сан болып табылады, себебі теріс көбейткіштердің жұп санының көбейтіндісі оң болады.</string>
    <string name="topic107">-3<sup><small>2</small></sup> = (-3) · (-3) = 9;</string>
    <string name="topic108">Тақ көрсеткіші бар теріс сан теріс сан болып табылады, себебі теріс факторлардың тақ санының көбейтіндісі теріс болады.</string>
    <string name="topic109">-2<sup><small>3</small></sup> = (-2) · (-2) · (-2) = -8;</string>
    <string name="topic110">1) Кез келген санның бірінші дәрежесі бірдей санға тең: a<sup><small>1</small></sup> = a.</string>
    <string name="topic111">2) Нөлдік дәрежедегі кез келген сан 1-ге тең: a<sup><small>0</small></sup> = 1, a ≠ 0.</string>
    <string name="topic112">\n3) 0-дің кез келген дәрежесі нөлге тең. 0<sup><small>n</small></sup> = 0, n ≠ 0.</string>
    <string name="topic113">\n4) 1-дің кез келген дәрежесі 1-ге тең. 1<sup><small>n</small></sup> = 1. </string>
    <string name="test1q1">1. Дәрежені туынды ретінде жазыңыз: 6<sup><small>5</small></sup></string>
    <string name="test1q1o1">5∙5∙5∙5∙5∙5</string>
    <string name="test1q1o2">6∙6∙6∙6∙6</string>
    <string name="test1q1o3">6∙6∙6∙6∙6∙6</string>
    <string name="test1q1o4">5∙5∙5∙5∙5</string>
    <string name="test1q2">2. Дәреженің негізін көрсетіңіз: 12<sup><small>7</small></sup></string>
    <string name="test1q2o1">7</string>
    <string name="test1q2o2">2</string>
    <string name="test1q2o3">12</string>
    <string name="test1q2o4">21</string>
    <string name="test1q3">3. Аралас санды дәрежеге көтеріп, мәнін табыңыз: (2 2&#8260;3)<sup><small>3</small></sup></string>
    <string name="test1q3o1">8 8&#8260;27</string>
    <string name="test1q3o2">24&#8260;9</string>
    <string name="test1q3o3">64&#8260;9</string>
    <string name="test1q3o4">512&#8260;27</string>
    <string name="test1q4">4. Өнімді қуат ретінде жазыңыз:
                                (-0,8)∙(-0,8)∙(-0,8)∙(-0,8)∙(-0,8)</string>
    <string name="test1q4o1">(-0,8)<sup><small>5</small></sup></string>
    <string name="test1q4o2">(0,8)<sup><small>5</small></sup></string>
    <string name="test1q4o3">(0,8)<sup><small>4</small></sup></string>
    <string name="test1q4o4">(-5)<sup><small>0,8</small></sup></string>
    <string name="test1q5">5. Өнімді қуат түрінде жазыңыз:\n(a-b)(a-b)(a-b)(a-b)</string>
    <string name="test1q5o1">(a-b)<sup><small>4</small></sup></string>
    <string name="test1q5o2">a<sup><small>4</small></sup> - b<sup><small>4</small></sup></string>
    <string name="test1q5o3">(a<sup><small>4</small></sup> - b<sup><small>4</small></sup>)<sup><small>4 </small></sup></string>
    <string name="test1q5o4">(a-b)(a-b)<sup><small>4</small></sup></string>
    <string name="test1q6">6. Дәрежені есептеңіз: (-0,9)<sup><small>3</small></sup></string>
    <string name="test1q6o1">0,729</string>
    <string name="test1q6o2">-0,729</string>
    <string name="test1q6o3">0,27</string>
    <string name="test1q6o4">-0,27</string>
    <string name="test1q7">7. Дәрежені есептеңіз: -5<sup><small>4</small></sup></string>
    <string name="test1q7o1">625</string>
    <string name="test1q7o2">-125</string>
    <string name="test1q7o3">125</string>
    <string name="test1q7o4">-625</string>
    <string name="test1q8">8.Есептеңіз: (9∙5&#8260;12)<sup><small>2</small></sup> </string>
    <string name="test1q8o1">45&#8260;144</string>
    <string name="test1q8o2">625&#8260;144</string>
    <string name="test1q8o3">225&#8260;16</string>
    <string name="test1q8o4">300&#8260;24</string>
    <string name="test1q9">9. Есептеңіз: -2,5∙2<sup><small>6</small></sup></string>
    <string name="test1q9o1">160</string>
    <string name="test1q9o2">-160</string>
    <string name="test1q9o3">80</string>
    <string name="test1q9o4">-80</string>
    <string name="test1q10">10. Өрнектің мәнін табыңыз: -a<sup><small>3</small></sup> - 3a<sup><small>2</small></sup> + 2, мұндағы a=-3</string>
    <string name="test1q10o1">2</string>
    <string name="test1q10o2">-54</string>
    <string name="test1q10o3">54</string>
    <string name="test1q10o4">-2</string>
    <string name="topic201">Көбейту амалын қолданатын сандардан, айнымалылардан және олардың дәрежелерінен құралған өрнектер <b>бірмүшелер</b> деп аталады.</string>
    <string name="topic202">Мысалы, 5a; абба; 2x<sup><small>3</small></sup>(-3a)<sup><small>2</small></sup>cx; -7;3<sup><small>4</small></sup>; x; y<sup><small>5</small></sup> - бірмүшелер.</string>
    <string name="topic203">Коммутативті пайдаланып бірмүшелді 2x<sup><small>3</small></sup>(-3a)<sup><small>2</small></sup>cx мәнін жеңілдету және ассоциативті көбейту заңдары:</string>
    <string name="topic204">2x<sup><small>3</small></sup>(-3a)<sup><small>2</small></sup>cx = 2(-3) x<sup><small>3</small></sup>a<sup><small>2</small></sup>cx = -6a<sup><small>2</small></sup>cx<sup><small>4</small></sup></string>
    <string name="topic205">Бірінші сандық фактор, одан кейін айнымалылар және олардың дәрежелері келетін бірмүшелің бұл түрі <b>бірмүшелің стандартты түрі</b> деп аталады.</string>
    <string name="topic206">Стандартты түрде жазылған бірмүшелің санның көпіршікті бөлшегі <b>бірмүшелік коэффициенті</b> деп аталады.</string>
    <string name="topic207">Бирмүшелердің барлық айнымалылардың дәрежелерінің қосындысы <b>бірмүшелің дәрежесі</b> деп аталады.</string>
    <string name="topic208"><b>1-мысал.</b> Бірмүшелерді -3a<sup><small>2</small></sup>b<sup><small>3</small></sup> көбейтіңіз c және 5a<sup><small>3</small></sup>bc<sup><small>2</small></sup>d</string>
    <string name="topic209">-3a<sup><small>2</small></sup>b<sup><small>3</small></sup>c ∙ 5a<sup><small> 3</small></sup>bc<sup><small>2</small></sup>d = -15a<sup><small>5</small></sup>b<sup><small>4</small></sup>c<sup><small>3</small></sup>d</string>
    <string name="topic210"><b>2-мысал.</b> Бірмүшелін 2a<sup><small>2</small></sup>y<sup><small>3</small></sup>z төртінші дәрежеге көтеріңіз.</string>
    <string name="topic211">(2a<sup><small>2</small></sup>y<sup><small>3</small></sup>z)<sup><small>4 </small></sup> = 2<sup><small>4</small></sup>(a<sup><small>2</small></sup>)<sup><small>4 </small></sup>(y<sup><small>3</small></sup>)<sup><small>4</small></sup>z<sup><small>4</small></sup> = 16a<sup><small>8</small></sup>y<sup><small>12</small></sup>z<sup><small>4</small></sup></string>
    <string name="topic301">Көпмүшелерді көбейткіңіз келеді делік: m - n және a + b - c. Осы көпмүшелердің көбейтіндісін құрастырайық:</string>
    <string name="topic302">(m - n)(a + b - c)</string>
    <string name="topic303">m-n биномын х әрпімен белгілеп, мономді көпмүшеге көбейту ережесіне сәйкес туындыны түрлендіріңіз:</string>
    <string name="topic304">(m - n)(a + b - c) = x(a + b - c) = xa + xb - xc</string>
    <string name="topic305">xa + xb - xc өрнегінде x орнына m - n биномды ауыстырыңыз және мономді көпмүшеге көбейту ережесін қайта қолданыңыз:</string>
    <string name="topic306">xa + xb - xc = m - na + m - nb - m - nc = ma - na + mb - nb - mc + nc</string>
    <string name="topic307">Сонымен,</string>
    <string name="topic308">m - na + b - c = ma - na + mb - nb - mn + nc</string>
    <string name="topic309">Соңғы өрнек m - n көпмүшесінің әрбір мүшесі a + b - c көпмүшесінің әрбір мүшесіне көбейтілгеннен кейін алынғанын көреміз. Бұдан төменде берілген ережені аламыз.</string>
    <string name="topic310"><b>Көпмүшені көпмүшеге көбейту үшін бір көпмүшенің әрбір мүшесін екінші көпмүшенің әрбір мүшесіне көбейтіп, алынған көбейтінділерді қосу керек.</b></string>
    <string name="topic311"><b>Мысалы:</b> 5x<sup><small>3</small></sup> + (y<sup><small>2</small></sup> + 5x)(xy-x<sup><small>2</small></sup>) өрнегін жеңілдетіңіз</string>
    <string name="topic312"><b>Шешім</b>. Алдымен y<sup><small>2</small></sup> + 5x және xy - x<sup><small></small></sup> биномдарын көбейту керек, содан кейін ұқсас мүшелерді келтіру керек. </string>
    <string name="topic313">5x<sup>3</sup> + (y<sup>2</sup>+5x)(xy-x<sup>2</sup>) = 5x<sup>3 </sup> + y<sup>2</sup> ∙ xy - y<sup>2</sup>x<sup>2</sup> + 5x ∙ xy - 5x ∙ x<sup>2</sup> = 5x<sup>3</sup> + xy<sup>3</sup> - y<sup>2</sup> + 5x<sup>2</sup>y - 5x<sup>3</sup> sup> = xy<sup>3</sup> - y<sup>2</sup>x<sup>2</sup> + 5x<sup>2</sup>y</string>
    <string name="test2q1">1. Көрсетілген шығармалардан бірмүшенді табыңыз: </string>
    <string name="test2q1o1">x<sup><small>2</small></sup> + x</string>
    <string name="test2q1o2">3, 4x<sup><small>2</small></sup>y</string>
    <string name="test2q1o3">2(x + y)<sup><small>2</small></sup></string>
    <string name="test2q1o4">ab&#8260;a+b</string>
    <string name="test2q2">2. Бірмүшені стандартты түрде жазыңыз: 0,5m∙4n</string>
    <string name="test2q2o1">4,5mn</string>
    <string name="test2q2o2">0,9mn</string>
    <string name="test2q2o3">2mn</string>
    <string name="test2q2o4">1,5mn</string>
    <string name="test2q3">3. Бірмүшені стандартты түрде жазыңыз, оның коэффициентін табыңыз: 2&#8260;3m<sup><small>2</small></sup>n∙4,5n<sup><small>3</small></sup></string>
    <string name="test2q3o1">3</string>
    <string name="test2q3o2">9</string>
    <string name="test2q3o3">4</string>
    <string name="test2q3o4">0,5</string>
    <string name="test2q4">4. Бірмүшенің мәнін табыңыз: -0,125y<sup><small>4</small></sup>, eгер y = -2</string>
    <string name="test2q4o1">2</string>
    <string name="test2q4o2">1</string>
    <string name="test2q4o3">-2</string>
    <string name="test2q4o4">-1</string>
    <string name="test2q5">5. Бірмүшенің дәрежесін табыңыз: -xy∙2y<sup><small>3</small></sup>x<sup><small>4</small></sup></string>
    <string name="test2q5o1">7</string>
    <string name="test2q5o2">8</string>
    <string name="test2q5o3">12</string>
    <string name="test2q5o4">9</string>
    <string name="test2q6">6. Бірмүшені стандартты түрде жазыңыз: 0,12x∙(-0,3)y∙100y<sup><small>3</small></sup>x<sup><small>3</small></sup>y</string>
    <string name="test2q6o1">-36x<sup><small>4</small></sup>y<sup><small>4</small></sup></string>
    <string name="test2q6o2">3,6x<sup><small>4</small></sup>y<sup><small>6</small></sup></string>
    <string name="test2q6o3">36x<sup><small>5</small></sup>y<sup><small>4</small></sup></string>
    <string name="test2q6o4">-3,6x<sup><small>4</small></sup>y<sup><small>5</small></sup></string>
    <string name="test2q7">7. Бірмүшенің коэффициентін табыңыз: -9bc<sup><small>3</small></sup>∙(-y<sup><small>4</small></sup>)∙1 2&#8260;3xb</string>
    <string name="test2q7o1">-6</string>
    <string name="test2q7o2">15</string>
    <string name="test2q7o3">18</string>
    <string name="test2q7o4">-27</string>
    <string name="test2q8">8. Бірмүшенің мәнін табыңыз: x<sup><small>4</small></sup>y<sup><small>2</small></sup> , x = -1, y = -0,5</string>
    <string name="test2q8o1">0,25</string>
    <string name="test2q8o2">0,5</string>
    <string name="test2q8o3">2</string>
    <string name="test2q8o4">1</string>
</resources>