<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    tools:context=".Topic1">

    <RelativeLayout
        android:id="@+id/all"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            style="@style/SCREEN"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="342dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="14dp"
                android:layout_marginTop="43dp"
                android:text="Тема 1"
                android:textColor="@color/white"
                android:textSize="28dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="342dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="14dp"
                android:layout_marginTop="93dp"
                android:text="Понятие степени с натуральным показателем"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/header"
            android:layout_marginTop="-30dp"
            android:background="@drawable/backgrounds1">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="375dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="22dp"
                android:text="@string/topic101"
                android:textColor="@color/black"
                android:textSize="14dp"
                tools:ignore="NotSibling" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:text="@string/topic102"
                android:textColor="@color/black"
                android:textSize="14dp"
                tools:ignore="NotSibling" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="373dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="18dp"
                android:text="@string/topic103"
                android:textColor="@color/black"
                android:textSize="14dp"
                tools:ignore="NotSibling" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView7"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:text="@string/topic104"
                android:textColor="@color/black"
                android:textSize="14dp"
                tools:ignore="NotSibling" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="373dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView8"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="18dp"
                android:text="@string/topic105"
                android:textColor="@color/black"
                android:textSize="14dp"
                tools:ignore="NotSibling" />

            <RelativeLayout
                android:id="@+id/textbox1"
                android:layout_width="386dp"
                android:layout_height="160dp"
                android:layout_below="@+id/textView9"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/textback"
                android:elevation="8dp">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="184dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:layout_marginEnd="207dp"
                    android:text="Примечание: "
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="332dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView10"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="59dp"
                    android:textColor="@color/black"
                    android:text="@string/topic110"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="57dp"
                    android:textColor="@color/black"
                    android:text="@string/topic111"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="25dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="95dp"
                    android:layout_marginEnd="58dp"
                    android:text="@string/topic112"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="120dp"
                    android:textColor="@color/black"
                    android:layout_marginEnd="58dp"
                    android:text="@string/topic113"
                    android:textSize="12dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="373dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textbox1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="18dp"
                android:text="@string/topic106"
                android:textColor="@color/black"
                android:textSize="14dp"
                tools:ignore="NotSibling" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView15"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/topic107"
                android:textColor="@color/black"
                android:textSize="14dp"
                tools:ignore="NotSibling" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="373dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView16"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="18dp"
                android:text="@string/topic108"
                android:textColor="@color/black"
                android:textSize="14dp"
                tools:ignore="NotSibling" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView17"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/topic109"
                android:textColor="@color/black"
                android:textSize="14dp"
                tools:ignore="NotSibling" />

            <RelativeLayout
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/textView18"
                style="@style/SCREEN"
                android:layout_marginTop="40dp"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/buttonNext"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="162dp"
                    style="@style/BUTTONTOPIC"
                    android:onClick="startTopicActivity"
                    android:text="Следующяя тема"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/buttonTest"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="20dp"
                    style="@style/BUTTONTOPIC"
                    android:onClick="startTestActivity"
                    android:text="Начать Тест"
                    android:textColor="@color/white"
                    android:layout_alignParentEnd="true"
                    android:textSize="12dp" />

            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>